--- a/bitcoin_pages/templates/bitcoin_pages/bitcoin_and_ethereum.html
+++ b/bitcoin_pages/templates/bitcoin_pages/bitcoin_and_ethereum.html
@@ -56,25 +56,6 @@
 							</div>
 						</div>
 					</div>
-					<!-- end widget -->
-					<div class="widget tes_wid">
-						<h3 class="widget-title">Clinet Feebback</h3>
-						<!-- end widget tittle-->
-						<div class="widget-inner mt-5 text-center">
-							<div class="single-testimonial">
-								<div class="single-testimonial-image">
-									<img class="img-fluid rounded-circle" src="{% static 'assets/img/team/person1.jpg' %}" alt="">
-								</div>
-								<div class="single-testimonial-content">
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam. </p>
-								</div>
-								<div class="single-testimonial-meta">
-									<p>- Jone Doe</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- end widget -->	
 				</div>
 				<!-- end col -->
 				<div class="col-lg-8 col-md-8 col-12">
@@ -132,17 +113,17 @@
 					<!-- end image tab -->
 					<div class="row mt-4">
 						<div class="col-12 ser-page-into">
-							<h4>Service Overview</h4>
-							<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illodrut inventore veritatis et quasi architecto beatae vitae dicta sunt.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+							<h4>Bitcoin and Ethereum</h4>
+							<p>If Bitcoin seeks to serve as a digital gold, Ethereum has taken a different approach, generalizing so its users can create any number of custom assets and programs governing their operation.</p>
 						</div>
 						<!-- end col -->
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-12 mb-lg-0 mb-md-0 mb-4 pl-4 ser-page-into">
 								<ul>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Consectetur -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Eiusmod -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Perspiciatis -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Voluptatem -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>Ethereum Blockchain -</strong> Today, Ethereum uses proof-of-work mining (in which computers burn energy to solve puzzles needed to create blocks) to power its blockchain.</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>Proof-of-Stake -</strong> With the transition to Ethereum 2.0, Ethereum plans to alter its core operating system, migrating to a system called proof-of-stake (PoS). </li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>A finite supply -</strong> According to the software rules, only 21 million bitcoins can be produced, a limit that gives bitcoins value.</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>Portability -</strong> With BTC, you can carry around all your wealth on a flash drive, memorized in your brain or transfer it instantly via the internet.</li>
 								</ul>
 							</div>
 							<!-- end col -->
@@ -182,7 +163,7 @@
 									<div class="tab-pane animated fadeInRight active show" id="srone">
 										<div class="row">
 											<div class="col-lg-5 col-md-5 col-12 mb-lg-0 mb-md-0 mb-sm-3 mb-3">
-												<p>Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnag aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborinu aliquip ex ea commodo consequat. Du aute irure dolor in reprehenderit inlore voluptate velit esse cillum dolore eure fugiat nulla pariatur. Excepteur sintdr occaecat cupidatat non proident, sun culpa qui officia deserunt.</p>										
+												<p>Among the first to embrace Ethereum were major banks and institutions, who took advantage of its open-source code to create proof-of-concepts and R&D initiatives in 2015 and 2016.</p>										
 											</div>
 											<div class="col-lg-7 col-md-7 col-12 mt-4">
 												<img class="img-fluid" src="{% static 'assets/img/blog/2.jpg' %}" alt="">
@@ -195,15 +176,15 @@
 												<img class="img-fluid" src="{% static 'assets/img/blog/1.jpg' %}" alt="">
 											</div>
 											<div class="col-lg-5 col-md-5 col-12">
-												<p>Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnag aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborinu aliquip ex ea commodo consequat. Du aute irure dolor in reprehenderit inlore voluptate velit esse cillum dolore eure fugiat nulla pariatur. Excepteur sintdr occaecat cupidatat non proident, sun culpa qui officia deserunt.</p>										
+												<p>Like paper cash or gold, depending on how you received your BTC it will have varying degrees of fungibility. BTC that was involved in a crime, for example, may not be accepted by exchanges or merchants. (This remains an active area of research for Bitcoin developers.)</p>										
 											</div>
 										</div>
 									</div>
 									<div class="tab-pane animated fadeInRight" id="srthree">
-										<p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+										<p class="mb-3">For something to store value, people need to recognize and accept that it’s worth something.</p>
 										<ul>
-											<li><i class="icofont icofont-ui-press"></i> <strong>Consectetur -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
-											<li><i class="icofont icofont-ui-press"></i> <strong>Eiusmod -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
+											<li><i class="icofont icofont-ui-press"></i> <strong>Acceptability -</strong> There are currently thousands of individuals and vendors accepting Bitcoin payments.</li>
+											<li><i class="icofont icofont-ui-press"></i> <strong>Buy and sell -</strong> You can also buy and sell BTC for other cryptocurrencies alongside more traditional currencies at exchanges like Fonixcoin.</li>
 										</ul>
 									 </div>
 								</div>
