--- a/bitcoin_pages/templates/bitcoin_pages/bitcoin_legality.html
+++ b/bitcoin_pages/templates/bitcoin_pages/bitcoin_legality.html
@@ -11,7 +11,7 @@
 					<div class="col-12 text-center">
 						<div class="single-page-title">
 							<h2>Bitcoin Legality</h2>
-							<p>Lorem ipsum dolor sit amet</p>
+						
 						</div>
 					</div>
 				</div>
@@ -23,8 +23,8 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="#">Home</a></li>
-							<li class="breadcrumb-item active">Single Service</li>
+							<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
+							<li class="breadcrumb-item active">Legality</li>
 						</ol>
 					</div>
 				</div>
@@ -57,25 +57,6 @@
 							</div>
 						</div>
 					</div>
-					<!-- end widget -->
-					<div class="widget tes_wid">
-						<h3 class="widget-title">Clinet Feebback</h3>
-						<!-- end widget tittle-->
-						<div class="widget-inner mt-5 text-center">
-							<div class="single-testimonial">
-								<div class="single-testimonial-image">
-									<img class="img-fluid rounded-circle" src="{% static 'assets/img/team/person1.jpg' %}" alt="">
-								</div>
-								<div class="single-testimonial-content">
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam. </p>
-								</div>
-								<div class="single-testimonial-meta">
-									<p>- Jone Doe</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- end widget -->	
 				</div>
 				<!-- end col -->
 				<div class="col-lg-8 col-md-8 col-12">
@@ -134,16 +115,15 @@
 					<div class="row mt-4">
 						<div class="col-12 ser-page-into">
 							<h4>Service Overview</h4>
-							<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illodrut inventore veritatis et quasi architecto beatae vitae dicta sunt.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+							<p>As far as The Platform Technology acts solely as an intermediary bringing together buyers and sellers nothing on the Fonixcoin platform can be ensured to contain no errors, mistakes, mispresentations or failures etc.</p>
 						</div>
 						<!-- end col -->
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-12 mb-lg-0 mb-md-0 mb-4 pl-4 ser-page-into">
 								<ul>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Consectetur -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Eiusmod -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Perspiciatis -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Voluptatem -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>Service Restriction -</strong> You shall not use our Services and immediately cease using those if you are a resident or become a resident at any time of the state or region, where Fonixcoin is not authorized to act.</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>Crypto coins and tokens Policy -</strong> Fonixcoin accepts deposits and provides withdrawals in any of the following crypto assets.</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>General -</strong>Any individual (the "user"), who opens an account with Fonixcoin understands and accepts that crypto assets do not necessarily have a specific form of protection or regulation by any governmental body.</li>
 								</ul>
 							</div>
 							<!-- end col -->
@@ -183,7 +163,7 @@
 									<div class="tab-pane animated fadeInRight active show" id="srone">
 										<div class="row">
 											<div class="col-lg-5 col-md-5 col-12 mb-lg-0 mb-md-0 mb-sm-3 mb-3">
-												<p>Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnag aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborinu aliquip ex ea commodo consequat. Du aute irure dolor in reprehenderit inlore voluptate velit esse cillum dolore eure fugiat nulla pariatur. Excepteur sintdr occaecat cupidatat non proident, sun culpa qui officia deserunt.</p>										
+												<p>However, Fonixcoin reserves the right to reject any deposits and suspend withdrawals which its compliance and risk management service provider has decided to be the result of detecting of suspicious activity such as criminal activity or any other infringement of its compliance guidelines.</p>										
 											</div>
 											<div class="col-lg-7 col-md-7 col-12 mt-4">
 												<img class="img-fluid" src="{% static 'assets/img/blog/2.jpg' %}" alt="">
@@ -196,16 +176,12 @@
 												<img class="img-fluid" src="{% static 'assets/img/blog/1.jpg' %}" alt="">
 											</div>
 											<div class="col-lg-5 col-md-5 col-12">
-												<p>Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnag aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborinu aliquip ex ea commodo consequat. Du aute irure dolor in reprehenderit inlore voluptate velit esse cillum dolore eure fugiat nulla pariatur. Excepteur sintdr occaecat cupidatat non proident, sun culpa qui officia deserunt.</p>										
+												<p>“Crypto assets” shall mean such type of assets which can only and exclusively be transmitted by means of block-chain technology, including but not limited to digital coins and digital tokens and any other type of digital mediums of exchange, such as Bitcoin, Ethereum, Ripple, etc, to the full and absolute exempt of the securities of any kind.</p>										
 											</div>
 										</div>
 									</div>
 									<div class="tab-pane animated fadeInRight" id="srthree">
-										<p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-										<ul>
-											<li><i class="icofont icofont-ui-press"></i> <strong>Consectetur -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
-											<li><i class="icofont icofont-ui-press"></i> <strong>Eiusmod -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
-										</ul>
+										<p class="mb-3"> "Third-Party Content" is the content provided by third parties, including without limitation links to web pages of such parties, which may be represented on the Technology Platform.</p>
 									 </div>
 								</div>
 							</div>
