--- a/bitcoin_pages/templates/bitcoin_pages/index.html
+++ b/bitcoin_pages/templates/bitcoin_pages/index.html
@@ -161,7 +161,7 @@
 								<h5>Account Security</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>We take every necessary precaution to keep you safe and secure..</p>
+								<p>We take every necessary precaution to keep you safe and secure.</p>
 							</div>
 						</div>
 					</div>
@@ -510,128 +510,6 @@
         <!--- END CONTAINER -->
     </section>
     <!-- END SERVICE SECTION -->
-	
-	<!-- START TEAM SECTION -->
-    <section id="team" class="section-padding bg-gray">
-        <div class="container">
-			<div class="row">
-				<div class="col-12 text-center">
-					<div class="section-title">
-						<h5>our masters</h5>
-						<h3>FonixCoin <span>Expert</span></h3>
-					</div>
-				</div>
-			</div>
-			<!-- end section title -->	 
-			<div class="row text-center">
-				<div class="team-slider owl-carousel owl-theme">
-					<div class="single-team-wrapper">
-						<div class="single-team">
-							<div class="single-team-img">
-								<img class="img-fluid" src="{% static 'assets/img/team/1.png' %}" alt="">
-								<div class="single-team-social">
-									<ul>
-									   <li><a class="sicon1" href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-									   <li><a class="sicon2" href="#"><i class="icofont icofont-social-twitter"></i></a></li>
-									   <li><a class="sicon3" href="#"><i class="icofont icofont-social-youtube-play"></i></a></li>
-									</ul>
-								</div>
-							</div>
-							<div class="single-team-meta">
-								<h4>Jone Doe</h4>
-								<span>Hash Theme, CEO</span>
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
-							</div>	
-						</div>							
-					</div>
-					<!-- end col -->
-					<div class="single-team-wrapper">
-						<div class="single-team">
-							<div class="single-team-img">
-								<img class="img-fluid" src="{% static 'assets/img/team/2.png' %}" alt="">
-								<div class="single-team-social">
-									<ul>
-									   <li><a class="sicon1" href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-									   <li><a class="sicon2" href="#"><i class="icofont icofont-social-twitter"></i></a></li>
-									   <li><a class="sicon3" href="#"><i class="icofont icofont-social-youtube-play"></i></a></li>
-									</ul>
-								</div>
-							</div>
-							<div class="single-team-meta">
-								<h4>Mark Henry</h4>
-								<span>Hash Theme, CEO</span>
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
-							</div>	
-						</div>							
-					</div>
-					<!-- end col -->
-					<div class="single-team-wrapper">
-						<div class="single-team">
-							<div class="single-team-img">
-								<img class="img-fluid" src="{% static 'assets/img/team/3.png' %}" alt="">
-								<div class="single-team-social">
-									<ul>
-									   <li><a class="sicon1" href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-									   <li><a class="sicon2" href="#"><i class="icofont icofont-social-twitter"></i></a></li>
-									   <li><a class="sicon3" href="#"><i class="icofont icofont-social-youtube-play"></i></a></li>
-									</ul>
-								</div>
-							</div>
-							<div class="single-team-meta">
-								<h4>Bishen Ketty</h4>
-								<span>Hash Theme, CEO</span>
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
-							</div>	
-						</div>							
-					</div>
-					<!-- end col -->
-					<div class="single-team-wrapper">
-						<div class="single-team">
-							<div class="single-team-img">
-								<img class="img-fluid" src="{% static 'assets/img/team/4.png' %}" alt="">
-								<div class="single-team-social">
-									<ul>
-									   <li><a class="sicon1" href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-									   <li><a class="sicon2" href="#"><i class="icofont icofont-social-twitter"></i></a></li>
-									   <li><a class="sicon3" href="#"><i class="icofont icofont-social-youtube-play"></i></a></li>
-									</ul>
-								</div>
-							</div>
-							<div class="single-team-meta">
-								<h4>Kwasan Rowy</h4>
-								<span>Hash Theme, CEO</span>
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
-							</div>	
-						</div>							
-					</div>
-					<!-- end col -->
-					<div class="single-team-wrapper">
-						<div class="single-team">
-							<div class="single-team-img">
-								<img class="img-fluid" src="{% static 'assets/img/team/5.png' %}" alt="">
-								<div class="single-team-social">
-									<ul>
-									   <li><a class="sicon1" href="#"><i class="icofont icofont-social-facebook"></i></a></li>
-									   <li><a class="sicon2" href="#"><i class="icofont icofont-social-twitter"></i></a></li>
-									   <li><a class="sicon3" href="#"><i class="icofont icofont-social-youtube-play"></i></a></li>
-									</ul>
-								</div>
-							</div>
-							<div class="single-team-meta">
-								<h4>Jone Doe</h4>
-								<span>Hash Theme, CEO</span>
-								<p>Lorem ipsum dolor sit amet consectetur ullamco adipiscing elit, sed do eiusmod tempor exercitat incididunt ut labore.</p>
-							</div>	
-						</div>							
-					</div>
-					<!-- end col -->	
-				</div>
-			</div>
-			<!-- end row -->
-        </div>
-        <!--- END CONTAINER -->
-    </section>
-    <!-- END TEAM SECTION -->
 	
 	<!-- START PRICETABLE SECTION -->
     <section id="pricetable" class="section-padding">
