--- a/bitcoin_pages/templates/bitcoin_pages/security_ensure.html
+++ b/bitcoin_pages/templates/bitcoin_pages/security_ensure.html
@@ -11,7 +11,7 @@
 					<div class="col-12 text-center">
 						<div class="single-page-title">
 							<h2>Account Security</h2>
-							<p>Lorem ipsum dolor sit amet</p>
+							<p>Never lose a Trade</p>
 						</div>
 					</div>
 				</div>
@@ -23,8 +23,8 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="#">Home</a></li>
-							<li class="breadcrumb-item active">Single Service</li>
+							<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
+							<li class="breadcrumb-item active">Account Security</li>
 						</ol>
 					</div>
 				</div>
@@ -57,25 +57,6 @@
 							</div>
 						</div>
 					</div>
-					<!-- end widget -->
-					<div class="widget tes_wid">
-						<h3 class="widget-title">Clinet Feebback</h3>
-						<!-- end widget tittle-->
-						<div class="widget-inner mt-5 text-center">
-							<div class="single-testimonial">
-								<div class="single-testimonial-image">
-									<img class="img-fluid rounded-circle" src="{% static 'assets/img/team/person1.jpg' %}" alt="">
-								</div>
-								<div class="single-testimonial-content">
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam. </p>
-								</div>
-								<div class="single-testimonial-meta">
-									<p>- Jone Doe</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- end widget -->	
 				</div>
 				<!-- end col -->
 				<div class="col-lg-8 col-md-8 col-12">
@@ -134,16 +115,16 @@
 					<div class="row mt-4">
 						<div class="col-12 ser-page-into">
 							<h4>Service Overview</h4>
-							<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illodrut inventore veritatis et quasi architecto beatae vitae dicta sunt.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+							<p>Security of user information and funds is our first priority. Learn more about our security features and integrations.The Fonixcoin REST and Websocket APIs are designed to facilitate access to all features of the Bitfinex platform, allowing full integration with traders’ own products and platforms.</p>
 						</div>
 						<!-- end col -->
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-12 mb-lg-0 mb-md-0 mb-4 pl-4 ser-page-into">
 								<ul>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Consectetur -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Eiusmod -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Perspiciatis -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Voluptatem -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>Safe and secure -</strong> 2-factor authentication, advanced encryption technology, cold storage – we give you peace of mind when it comes to security.</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>Robot friendly API -</strong> Make the most of your trading with our leading API and it's low latency data and execution feeds.</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>Information Security -</strong> All sensitive account information is encrypted at rest at both the system and data level. Access is strictly controlled and monitored.</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>Platform Security -</strong> Our servers reside in secure cages under 24/7 surveillance by armed guards and video monitors.</li>
 								</ul>
 							</div>
 							<!-- end col -->
@@ -183,7 +164,7 @@
 									<div class="tab-pane animated fadeInRight active show" id="srone">
 										<div class="row">
 											<div class="col-lg-5 col-md-5 col-12 mb-lg-0 mb-md-0 mb-sm-3 mb-3">
-												<p>Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnag aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborinu aliquip ex ea commodo consequat. Du aute irure dolor in reprehenderit inlore voluptate velit esse cillum dolore eure fugiat nulla pariatur. Excepteur sintdr occaecat cupidatat non proident, sun culpa qui officia deserunt.</p>										
+												<p>We have an expert team dedicated to testing our own systems via every imaginable attack vector. Additionally, we run a bug bounty program to leverage the expertise of the broader security research community.</p>										
 											</div>
 											<div class="col-lg-7 col-md-7 col-12 mt-4">
 												<img class="img-fluid" src="{% static 'assets/img/blog/2.jpg' %}" alt="">
@@ -196,15 +177,15 @@
 												<img class="img-fluid" src="{% static 'assets/img/blog/1.jpg' %}" alt="">
 											</div>
 											<div class="col-lg-5 col-md-5 col-12">
-												<p>Lorem ipsum dolor sit amet, consectet adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magnag aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laborinu aliquip ex ea commodo consequat. Du aute irure dolor in reprehenderit inlore voluptate velit esse cillum dolore eure fugiat nulla pariatur. Excepteur sintdr occaecat cupidatat non proident, sun culpa qui officia deserunt.</p>										
+												<p>Fonixcoin takes a comprehensive approach to protecting your investments. Our team of experts have built in a number of sophisticated measures to prevent the theft of money or information.</p>										
 											</div>
 										</div>
 									</div>
 									<div class="tab-pane animated fadeInRight" id="srthree">
-										<p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+										<p class="mb-3">We’ve assembled a global team of top security professionals who take a risk-based approach to ensuring our clients’ assets are protected at the highest levels while maintaining exceptional performance and an unparalleled client experience.</p>
 										<ul>
-											<li><i class="icofont icofont-ui-press"></i> <strong>Consectetur -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
-											<li><i class="icofont icofont-ui-press"></i> <strong>Eiusmod -</strong> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</li>
+											<li><i class="icofont icofont-ui-press"></i> <strong>Email confirmation -</strong> Email confirmations for withdrawals with self-serve account lock.</li>
+											<li><i class="icofont icofont-ui-press"></i> <strong>Global time lock -</strong> Global settings time lock for extreme security when you're away.</li>
 										</ul>
 									 </div>
 								</div>
