--- a/dashboard/templates/base_dash.html
+++ b/dashboard/templates/base_dash.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Bitfonix Admin - Dashboard</title>
+    <title>Fonixcoin Admin - Dashboard</title>
 
     {% block style %}
     <link rel="stylesheet" type="text/css" href="{% static 'ionicons/css/ionicons.css' %}">
@@ -74,7 +74,7 @@
     <a href="{% url 'dashboard' %}" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
 	  <b class="logo-mini">
-		  <span class="light-logo">Bitfonix</span>
+		  <span class="light-logo">Fonixcoin</span>
 		  <span class="dark-logo"></span>
 	  </b>
       <!-- logo for regular state and mobile devices -->
@@ -202,7 +202,7 @@
 		 <div class="ulogo">
 			 <a href="{% url 'dashboard' %}">
 			  <!-- logo for regular state and mobile devices -->
-			  <span><b>Bitfonix </b>Admin</span>
+			  <span><b>Fonixcoin </b>Admin</span>
 			</a>
 		</div>
         <div class="image">
