--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -125,7 +125,7 @@
 								<i class="fa fa-envelope-open"></i>
 							</div>
 							<p>Email Us</p>
-                            <h6>info@yoursite.com</h6>
+                            <h6>support@fonixcoin.com</h6>
                         </div>
 						<div class="header-info-box">
                             <div class="header-info-icon">
@@ -162,7 +162,7 @@
 											<li><a href="{% url 'crypto_trading' %}">Cryptocurrency</a></li>
 										</ul>
 									</li>
-									<li class="dropdown"><a href="blog.html" class="nav-link">Blog</a>
+									<li><a href="blog.html" class="nav-link">Blog</a>
 									</li>
 									<li><a href="{% url 'about-us' %}" class="nav-link">About Us</a></li>
 									<li><a href="{% url 'contact' %}" class="nav-link">Contact</a></li>
