--- a/users/templates/registration/password_reset_email.html
+++ b/users/templates/registration/password_reset_email.html
@@ -1,6 +1,6 @@
 {% autoescape off %}
 
-To initiate the password reset for your Bitfonix Account,
+To initiate the password reset for your Fonixcoin Account,
 click the link below:
 
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
@@ -10,5 +10,5 @@ if clicking the link above doesn't work, please copy the URL in a new browser wi
 if you did not request a reset, please ignore this message
 
 Sincerly,
-Bitfonix management
+Fonixcoin management
 {% endautoescape %}
