--- a/users/templates/registration/user_activated.html
+++ b/users/templates/registration/user_activated.html
@@ -40,7 +40,7 @@
 			<!-- end section title -->
 			<div class="row">
                 <div class="col-lg-7 mx-auto">
-                    <p>Your Bitfonix account has been successfully activated</p></br>
+                    <p>Your Fonixcoin account has been successfully activated</p></br>
                     <p>Please login <a href="{% url 'my-auth:login' %}">HERE</a></p>
                 </div>
 			</div>
