--- a/users/templates/registration/user_create_done.html
+++ b/users/templates/registration/user_create_done.html
@@ -40,7 +40,7 @@
 			<!-- end section title -->
 			<div class="row">
                 <div class="col-lg-7 mx-auto">
-                    <p>Your Bitfonix account has been successfully created</p></br>
+                    <p>Your Fonixcoin account has been successfully created</p></br>
                     <p>Please check your email for Confirmation link to activate your account</p>
                 </div>
 			</div>
