--- a/bitcoin_pages/templates/bitcoin_pages/about-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/about-us.html
@@ -11,7 +11,7 @@
 					<div class="col-12 text-center">
 						<div class="single-page-title">
 							<h2>About FonixCoin</h2>
-							<p>Lorem ipsum dolor sit amet</p>
+							<p>Delivering quality</p>
 						</div>
 					</div>
 				</div>
@@ -42,18 +42,9 @@
 					<div class="blockquote-wrapper">
 						<span class="blockquote-line"></span>
 						<blockquote class="blockquote">
-							<p><i class="icofont icofont-quote-left"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit Inte posuere erat a ante sed do eiusd tempor incididunt ut et dolore magna aliqua. <i class="icofont icofont-quote-right"></i></p>
-							<footer class="blockquote-footer">Jone Doe, <cite title="Source Title">Florida, USA</cite></footer>
+							<p><i class="icofont icofont-quote-left"></i> Partnering with Market Synergy, corporate accounts and professional traders can take advantage of the fastest trading speeds through institutional-grade connectivity and co-location services with direct access to our digital asset gateway. <i class="icofont icofont-quote-right"></i></p>
+							<footer class="blockquote-footer">Walter presavoy, <cite title="Source Title">Florida, USA</cite></footer>
 						</blockquote>
-						<div class="single-blog-hadmin">
-							<div class="single-blog-hadmin-img">
-								<img class="img-fluid rounded-circle" src="{% static 'assets/img/team/person2.jpg' %}" alt="">
-							</div>
-							<div class="single-blog-hadmin-info">
-								<p>Hash Theme</p>
-								<span>Web Development</span>
-							</div>
-						</div>
 					</div>
 				</div>
 				<!-- end col -->
@@ -68,7 +59,7 @@
 									<img class="img-fluid" src="{% static 'assets/img/clients/4.png' %}' %}" alt="">
 								</div>
 								<div class="image-two-des">
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illodrut inventore veritatis et quasi architecto beatae vitae dicta sunt. </p>
+									<p>We believe cryptocurrency is the future of money, and that building a robust, trusted, and accessible cryptoeconomy will create a more equitable and open financial system around the world. </p>
 								</div>
 								<div class="image-two-rem text-right">
 									<a href="#"><i class="icofont icofont-long-arrow-right"></i></a>
@@ -104,8 +95,7 @@
 						</div>
 						<div class="single-wcus-text">
 							<h5>Easy Trading</h5>
-							<p>FonixCoin offers a methodical approach to ensure profitability. Each trade is calculated through risk management techniques, technical analysis, and deep fundamental research. 
-								You will be given signaling of point of entry for every single trade in CFD over the counter trading spot market.</p>
+							<p>FonixCoin offers a methodical approach to ensure profitability. Each trade is calculated through risk management techniques, technical analysis, and deep fundamental research.</p>
 						</div>
 					</div>
 				</div>
@@ -117,7 +107,7 @@
 						</div>
 						<div class="single-wcus-text">
 							<h5>Trading Strategy</h5>
-							<p>Lorem ipsum dolor sit ametelid consectetur adipiscing elit sedd eiusmod tempor.</p>
+							<p>Master the basics with Fonixcoin's Crypto Guides, where we take an in-depth look at some of the top projects in this space.</p>
 						</div>
 					</div>
 				</div>
@@ -129,7 +119,7 @@
 						</div>
 						<div class="single-wcus-text">
 							<h5>Money Exchange</h5>
-							<p>Lorem ipsum dolor sit ametelid consectetur adipiscing elit sedd eiusmod tempor.</p>
+							<p>Buy and sell popular digital currencies, keep track of them in the one place.</p>
 						</div>
 					</div>
 				</div>
@@ -141,7 +131,7 @@
 						</div>
 						<div class="single-wcus-text">
 							<h5>Security Ensure</h5>
-							<p>Lorem ipsum dolor sit ametelid consectetur adipiscing elit sedd eiusmod tempor.</p>
+							<p>Fonixcoin takes a comprehensive approach to protecting your investments. Our team of experts have built in a number of sophisticated measures to prevent the theft of money or information.</p>
 						</div>
 					</div>
 				</div>
@@ -153,7 +143,7 @@
 						</div>
 						<div class="single-wcus-text">
 							<h5>Cryptocurrency Trading</h5>
-							<p>Lorem ipsum dolor sit ametelid consectetur adipiscing elit sedd eiusmod tempor.</p>
+							<p>A cryptocurrency exchange is a service for changing digital currencies, such as Bitcoin, Ethereum, and more.</p>
 						</div>
 					</div>
 				</div>
@@ -165,7 +155,7 @@
 						</div>
 						<div class="single-wcus-text">
 							<h5>Bitcoin Legality</h5>
-							<p>Lorem ipsum dolor sit ametelid consectetur adipiscing elit sedd eiusmod tempor.</p>
+							<p>Fonixcoin accepts deposits and provides withdrawals in any of the following crypto assets.</p>
 						</div>
 					</div>
 				</div>
@@ -175,48 +165,6 @@
         <!--- END CONTAINER -->
     </section>
     <!-- END CHOOSE US SECTION -->	
-	
-	<!-- START COUNTER SECTION -->
-    <section id="counter" class="section-padding overlay counter-section section-back-image-2" data-background="{% static 'assets/img/bg/counterbg2.jpg' %}">
-        <div class="container"> 
-			<div class="row text-center counter-wrapper">	 
-				<div class="col-lg-8 mx-auto">	 
-					<div class="row">	 
-						<div class="col-lg-6 col-md-6 col-12 counter-wrapper-inner">
-							<div class="single-counter">
-								<h3 class="timer">56</h3>
-								<p>Bitcoin</p>
-							</div>							
-						</div>
-						<!-- end col -->	 
-						<div class="col-lg-6 col-md-6 col-12 counter-wrapper-inner">
-							<div class="single-counter">
-								<h3 class="timer">95</h3>
-								<p>Wallet</p>
-							</div>							
-						</div>
-						<!-- end col -->	 
-						<div class="col-lg-6 col-md-6 col-12 counter-wrapper-inner">
-							<div class="single-counter">
-								<h3 class="timer">85</h3>
-								<p>ATM</p>
-							</div>							
-						</div>
-						<!-- end col -->	 
-						<div class="col-lg-6 col-md-6 col-12 counter-wrapper-inner">
-							<div class="single-counter">
-								<h3 class="timer">68</h3>
-								<p>Client</p>
-							</div>							
-						</div>
-						<!-- end col -->
-					</div>
-				</div>
-			</div>
-        </div>
-        <!--- END CONTAINER -->
-    </section>
-    <!-- END PROMO SECTION -->
 	
 	<!-- START PRICETABLE SECTION -->
     <section id="pricetable" class="section-padding">
@@ -233,47 +181,23 @@
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-12 pr-lg-5 pr-md-5 pr-sm-0 pr-0 mb-lg-0 mb-md-4 mb-sm-4 mb-4">
 					<div class="table-responsive">
-						<table class="bitland-table bitland-table-2 table">
-							<thead>
-								<tr>
-									<th scope="col">Cryptocurrency</th>
-									<th scope="col">Price</th>
-									<th scope="col">Supppy</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<th scope="row"><i class="icofont icofont-cur-baht"></i> Bitcoin</th>
-									<td>85.78$</td>
-									<td>427BTC</td>
-								</tr>
-								<tr>
-									<th scope="row"><i class="icofont icofont-cur-dollar"></i> FonixCoin</th>
-									<td>97.45$</td>
-									<td>492BTC</td>
-								</tr>
-								<tr>
-									<th scope="row"><i class="fas fa-shekel-sign"></i> Degitalcash</th>
-									<td>45.89$</td>
-									<td>635BTC</td>
-								</tr>
-								<tr>
-									<th scope="row"><i class="icofont icofont-cur-euro-true"></i> Ethereum</th>
-									<td>78.35$</td>
-									<td>395BTC</td>
-								</tr>
-								<tr>
-									<th scope="row"><i class="icofont icofont-cur-dollar-plus"></i> Stellar</th>
-									<td>45.89$</td>
-									<td>829BTC</td>
-								</tr>
-								<tr>
-									<th scope="row"><i class="icofont icofont-cur-renminbi-true"></i> Ripple</th>
-									<td>76.28$</td>
-									<td>623BTC</td>
-								</tr>
-							</tbody>
-						</table>
+						<!-- TradingView Widget BEGIN -->
+						<div class="tradingview-widget-container">
+							<div class="tradingview-widget-container__widget"></div>
+							<div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/markets/cryptocurrencies/prices-all/" rel="noopener" target="_blank"><span class="blue-text">Cryptocurrency Markets</span></a> by TradingView</div>
+							<script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-screener.js" async>
+							{
+							"width": "550",
+							"height": "500",
+							"defaultColumn": "overview",
+							"screener_type": "crypto_mkt",
+							"displayCurrency": "USD",
+							"colorTheme": "light",
+							"locale": "en"
+						}
+							</script>
+						</div>
+  						<!-- TradingView Widget END -->
 					</div>
 				</div>
 				<!-- end col -->
@@ -432,9 +356,9 @@
 				<div class="col-12 text-center">
 					<div class="calltoaction-two-wrap mb-4">
 						<h4 class="text-uppercase">Need More Service?</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+						<p>If you have questions, comments or concerns, our local staff is on-hand to answer all your needs.<br>Contact us by email</p>
 					</div>
-					<a href="#" class=" wow fadeInDown btn-style btn-border btn-border-3">Contact Us <i class="icofont icofont-hand-right"></i></a>
+					<a href="{% url 'contact' %}" class=" wow fadeInDown btn-style btn-border btn-border-3">Contact Us <i class="icofont icofont-hand-right"></i></a>
 				</div>
 				<!-- end col -->
 				<!-- end col -->
@@ -443,55 +367,6 @@
 		</div>
 	</section>
     <!-- END CALLTOACTION SECTION -->
-	
-	<!-- START TESTIMONIAL SECTION -->
-    <section id="testimonial" class="section-padding">
-        <div class="container">
-			<div class="row">
-				<div class="col-12 text-center">
-					<div class="section-title">
-						<h5>customer Feedback</h5>
-						<h3>What <span>Clinet Say</span></h3>
-					</div>
-				</div>
-			</div>
-			<!-- end section title -->
-			<div class="testimonial-wrapper bg-gray-2 section-padding">
-				<div class="row">
-					<div class="col-lg-8 mx-lg-auto mx-md-auto mx-0 text-center">
-						<div class="testimonial-slider owl-carousel owl-theme">
-							<div class="single-testimonial">
-								<div class="single-testimonial-image">
-									<img class="img-fluid rounded-circle" src="{% static 'assets/img/team/person1.jpg' %}" alt="">
-								</div>
-								<div class="single-testimonial-content">
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illodrut inventore veritatis et quasi architecto beatae vitae dicta sunt. </p>
-								</div>
-								<div class="single-testimonial-meta">
-									<p>- Jone Doe</p>
-								</div>
-							</div>
-							<!-- end single testimonial -->
-							<div class="single-testimonial">
-								<div class="single-testimonial-image">
-									<img class="img-fluid rounded-circle" src="{% static 'assets/img/team/person2.jpg' %}" alt="">
-								</div>
-								<div class="single-testimonial-content">
-									<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illodrut inventore veritatis et quasi architecto beatae vitae dicta sunt. </p>
-								</div>
-								<div class="single-testimonial-meta">
-									<p>- Hash Theme</p>
-								</div>
-							</div>
-							<!-- end single testimonial -->
-						</div>
-					</div>
-				</div>
-			</div>
-        </div>
-        <!--- END CONTAINER -->
-    </section>
-    <!-- END TESTIMONIAL SECTION -->
 	
 	<!-- START CLIENT SECTION -->
     <div id="client" class="client-section-padding bg-gray">
