--- a/bitcoin_pages/templates/bitcoin_pages/contact-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/contact-us.html
@@ -11,7 +11,7 @@
 					<div class="col-12 text-center">
 						<div class="single-page-title">
 							<h2>Get In Touch</h2>
-							<p>Lorem ipsum dolor sit amet</p>
+							<p>Send us a message</p>
 						</div>
 					</div>
 				</div>
@@ -23,7 +23,7 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<ol class="breadcrumb">
-							<li class="breadcrumb-item"><a href="#">Home</a></li>
+							<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
 							<li class="breadcrumb-item active">Contact Us</li>
 						</ol>
 					</div>
@@ -54,8 +54,7 @@
 						</div>
 						<div class="single-address-dec">
 							<h4>Write a mail</h4>
-							<p>Email: info@yoursite.com</p>
-							<p>Email: info@yourname.com</p>
+							<p>Email: support@fonixcoin.com</p>
 						</div>
 						<div class="single-address-link">
 							<a href="#">quick Send</a>
@@ -126,7 +125,7 @@
 								<div class="row">
 									<div class="form-group col-12 mb-3">
 										<label>First Name:</label>
-										<input name="name" class="form-control" id="cname" required="required" type="text">
+										<input name="name" class="form-control" id="cname" required="required" placeholder="First name" type="text">
 									</div>
 									<div class="form-group col-12 mb-3">
 										<label>Your Email:</label>
