--- a/users/templates/registration/user_activate_failed.html
+++ b/users/templates/registration/user_activate_failed.html
@@ -40,7 +40,7 @@
 			<!-- end section title -->
 			<div class="row">
                 <div class="col-lg-7 mx-auto">
-                    <p>Your Bitfonix account activation failed</p></br>
+                    <p>Your Fonixcoin account activation failed</p></br>
                     <p>Activation link not valid or expired, please restart your registration.</p>
                 </div>
 			</div>
