--- a/users/templates/registration/email_create.html
+++ b/users/templates/registration/email_create.html
@@ -5,7 +5,7 @@ We've received a request to create an account for this email.
 
 Please click on the link to activate your account:
 
-{{ protocol }}://{{ domain }}{% url 'my-auth:activate' uidb64=uid token=token %}
+http://{{ domain }}{% url 'my-auth:activate' uidb64=uid token=token %}
 
 
 Sincerly,
