--- a/bitcoin_pages/templates/bitcoin_pages/contact-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/contact-us.html
@@ -2,6 +2,7 @@
 {% load static %}
 {% block title %}Contact Us{% endblock %}
 {% block content %}
+{% load crispy_forms_tags %}
 
 	<!-- START PAGE BANNER AND BREADCRUMBS -->
 	<section id="page-banner">
@@ -121,36 +122,11 @@
 				<div class="col-lg-7 mx-auto">
 					<div class="contact-form-wrapper">
 						<div class="contact-form">
-							<form id="contact-form" class="form" name="enq" method="POST" action="">
-								<div class="row">
-									<div class="form-group col-12 mb-3">
-										<label>First Name:</label>
-										<input name="name" class="form-control" id="cname" required="required" placeholder="First name" type="text">
-									</div>
-									<div class="form-group col-12 mb-3">
-										<label>Your Email:</label>
-										<input name="email" class="form-control" id="cemail" required="required" type="email">
-									</div>
-									<div class="form-group col-12 mb-3">
-										<label>Phone Number:</label>
-										<input name="number" class="form-control" id="cnumber" required="required" type="text">
-									</div>
-									<div class="form-group col-12 mb-3">
-										<label>Subject:</label>
-										<input name="subject" class="form-control" id="csubject" required="required" type="text">
-									</div>
-									<div class="form-group col-12 mb-3">
-										<label>Message:</label>
-										<textarea rows="6" name="message" class="form-control" id="cmessage" placeholder="Your Message Here..." required="required"></textarea>
-									</div>
-									<div class="form-group col-lg-12 mb-0 text-center">
-										<div class="actions">
-											<input value="Submit Message" name="submit" id="submitButton" class="btn btn-contact-bg" title="Click here to submit your message!" type="submit">
-											<img src="{% static 'assets/img/ajax-loader.gif' %}" id="loader" style="display:none" alt="loading" width="16" height="16">
-										</div>
-									</div>
-								</div>
-							</form>								
+							<form method="post">
+								{% csrf_token %}
+								{{ form|crispy }}
+								<button type="submit" class="btn btn-primary">Send</button>
+							  </form>							
 						</div>
 					</div>
 				</div>
